Added DID document response on /{address}/did.json
