# types/web_outputs.go
@@ -1,0 +1,5 @@
+package types
+
+type OutputFindAddress struct {
+	Address string `json:"address"`
+}
